--- a/lbj.html
+++ b/lbj.html
@@ -5,7 +5,6 @@
     </head>
     <body>
 
-     
         <div class="ans">
             1.  &nbsp;canvas <br>
             2.  &nbsp;document object model <br>
@@ -138,10 +137,10 @@
                     Referred by 
                     <input list="refer" name="browser" id="browser">
                     <datalist id="refer">
-                      <option value="check">
-                      <option value="the">
-                      <option value="a">
-                      <option value="tag">
+                      <option value="HR">
+                      <option value="CEO">
+                      <option value="cleak">
+                      <option value="janitor">
                     </datalist>
                 </div>
 
